# AXIS

./: ARCHITECTURE.md  Makefile  README.md  README.rebuttal.md  README.savings.md  The-CALYX-Constitution.md  The95ThesesofCALYX-PY.md  axis_adapters.py  axis_pipes.py  axis_rules.py  calyx_composition.py  core.py  demo.py  demo_pipeline.py  docs  philosophy.md  pyproject.toml  quickstart.md  setup.py  test.py  weatherapi.py
adapters/: db.py  files.py  http.py
axis/: __init__.py  __main__.py  axis_adapters.py  axis_core.py  axis_pipes.py  axis_ra.py  axis_rules.py  axis_structures.py
axis/cli/: __init__.py  main.py
axis/cli/commands/: compose.py  run.py  validate.py
axis/engine/: __init__.py  ast.py  hash.py
axis/testing/: __init__.py  rules.yaml
axis/utils/: __init__.py
beta/: axis_rules_ra.py
docs/: Implementation.md  The-AXIS-Constitution.md  axis-conventions.md  neetcode.md  philosophy.md  security.md
examples/: adults.yaml  alert_adapters.yaml  clock.yaml  ecommerce_logic.yaml  ecommerce_normalize.yaml  example_app.py  fallback_demo.py  flask_app.py  golden_tests_vectors.json  log_normal.yaml  logic.yaml  new.json  normalize.yaml  product.json  quick_validate.py  run_rules.py  safe_adapters.yaml  save.yaml  security_rules.yaml  serve_rules.py  suspicious_log.json  test_vectors.json  typecheck.py  user.json  user_departments.yaml  user_rules.yaml  users.json  validate.py
examples/output/products/: Wireless_Headphones_analysis.json
frameworks/fastapi-service/: axis_fastapi.py  calyx_fastapi.py  calyx_flask.py
frameworks/flask-api/: axis_flask.py
frameworks/react-integration/: calyx-react.py
legacy/: axis_composition.py  singlefile.py
legacy/axis/: __init__.py
legacy/axis/adapters/: __init__.py  database.py  http.py
legacy/axis/cli/commands/: test.py
legacy/axis/engine/: reducer.py  rule_engine.py
legacy/axis/integrations/: __init__.py  fastapi.py  flask.py
legacy/axis/utils/: validator.py
legacy/json-shell/: axis_adapters.py  axis_pipes.py  axis_rules.py
tests/: golden_vectors.py  rules.yaml  test_axis_complete.py
